# configu

./: .configu  .dockerignore  .editorconfig  .eslintrc  .gitignore  .gitpod.yml  .lintstagedrc  .lintstagedrc.js  .lintstagedrc.mjs  .npmrc  .prettierignore  .prettierrc  .syncpackrc  .syncpackrc.js  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.mts  cspell.json  eslint.config.mjs  in.ts  lint-staged.config.js  module.js  out.json  out.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prepare.mts  sbom.mts  start.cfgu.json  store.json  test.cfgu.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.bundle.json  tsconfig.json  tsconfig.next.json  (+4 more)
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  feature-request.md  feature-request.yml  maintenance-chore.md
.github/configs/: cli-release-drafter.yml  formatters-release-drafter.yml  go-release-drafter.yml  labeler.yml  lib-release-drafter.yml  node-dist.txt  proxy-release-drafter.yml  py-release-drafter.yml  release-drafter.yml  sdk-release-drafter.yml  ts-release-drafter.yml  vscode-release-drafter.yml
.github/workflows/: cd-cli-david.yml  cd-cli.yml  cd-configu-integrations.yml  cd-cra.yml  cd-go.yml  cd-lib.yml  cd-proxy.yml  cd-py.yaml  cd-py.yml  cd-store.yml  cd-ts.yml  cd-vscode.yml  ci-drafter.yaml  ci-drafter.yml  ci-go-test.yml  ci-go.yml  ci-health.yaml  ci-health.yml  ci-integrations.yml  ci-issue.yml  ci-pr.yml  ci-py-test.yaml  ci-py-test.yml  ci-py.yml  ci-ts-test.yaml  ci-ts-test.yml  ci-ts.yml
docs/: architecture.mdx  cfgu.mdx  commands.mdx  configschema.mdx  configu-cloud.mdx  configu-orch.mdx  contributing.mdx  faq.mdx  mint.json  package-lock.json  package.json  prepare.js  prepare.mjs  terminology.mdx  typedoc.base.js  typedoc.js  vscode-ext.mdx
docs/0-introduction/: 2-comparison.mdx  3-concepts.mdx  4-workflow.mdx
docs/CLI/: cli-command-ref.mdx  cli-config-file.mdx  cli-overview.mdx  cli-setup.mdx
docs/IDE-plugins/: intellij-ext.mdx
docs/SDK/: sdk-nodejs.mdx  sdk-overview.mdx  sdk-python.mdx
docs/concepts/: cfgu.mdx  configset.mdx  configstore.mdx
docs/configu-cloud/: activity-logs.mdx  approval-queue.mdx  authorization.mdx  members.mdx  (+8 more)
go/: README.md  command.go  config_schema.go  config_set.go  config_store.go  configu_store.go  eval_command.go  generated.go  go.mod  go.sum  in_memory_store.go  json_file_store.go  upsert_command.go  utils.go
java/: pom.xml
jtd/: Cfgu.jtd.json  CfguContents.jtd.json  Set.jtd.json  Store.jtd.json  StoreContents.jtd.json  generate.sh
patches/: @npmcli__run-script.patch  giget.patch  npm.patch
playground/: .configu  flatten.cfgu.old.json  stdin  store.json  store.sqlite  test.cfgu.yaml  tmpl.txt  unified.cfgu.old.json  v0.cfgu.json
py/: .flake8  .gitignore  DOCS.md  README.md  __init__.py  lint-staged.config.js  pyproject.toml
py/configu/: __init__.py  utils.py
py/configu/commands/: __init__.py  eval_cmd.py  eval_command.py  export_command.py  upsert_command.py
py/configu/core/: __init__.py  command.py  config_schema.py  config_set.py  config_store.py  generated.py
py/configu/model/: __init__.py  config.py  config_query.py  config_set.py  generated.py
py/configu/stores/: __init__.py  aws_secrets_manager_store.py  azure_key_vault_store.py  configu_store.py  gcp_secret_manager.py  hashicorp_vault_store.py  in_memory_store.py  json_file_store.py  key_value_store.py  kubernetes_secret_store.py
py/src/configu/: __init__.py  config_schema.py  config_set.py  utils.py
py/src/configu/commands/: __init__.py  eval_command.py
py/src/configu/model/: __init__.py  command.py  config.py  config_query.py  config_schema.py  config_set.py  config_store.py  generated.py
py/src/configu/stores/: __init__.py  config_store.py  in_memory_store.py  json_file.py
py/src/configu/types/: generated.py
py/src/types/: generated.py
py/tests/: schemas.py  test_model.py  test_sdk.py
py/tests/commands/: test_eval_command.py  test_export_command.py  test_upsert_command.py
py/tests/core/: test_config_schema.py  test_config_set.py
py/tests/staticfiles/config_schemas/invalid/: default_and_required.cfgu.json  default_and_template.cfgu.json  invalid_default.cfgu.json  jsonschema.cfgu.json  nonexistent_type.cfgu.json  regex_missing_pattern.cfgu.json  reserved_names.cfgu.json
py/tests/staticfiles/config_schemas/valid/: basic.cfgu.json  complex.cfgu.json  jsonschema.cfgu.json
py/tests/stores/: test_in_memory_store.py  test_json_file_store.py
ts/: .eslintrc  .gitignore  .prettierignore  .prettierrc  jest.config.js  lint-staged.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  typedoc.base.js  typedoc.js
types/: Cfgu.ts  Config.ts  ConfigSchema.ts  ConfigSet.ts  ConfigStore.ts  Schema.ts  SchemaContents.ts  Set.ts  Store.ts
types-old/: Cfgu.ts  CfguContents.ts  Schema.ts  Set.ts  Store.ts  StoreContents.ts  generate.sh  out.py  out.ts
(+211 files in other folders)
