[tool.poetry]
name = "configu"
version = "0.0.0"
description = "Configu Python SDK"
authors = ["Configu <info@configu.com>"]
maintainers = [
  "Ron Roditi <ron@configu.com>",
  "Or Levi <orlevi128@gmail.com>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://configu.com/"
repository = "https://github.com/configu/configu"
documentation = "https://configu.com/docs/"
keywords = [
  "cfgu",
  "configu",
  "configu-sdk",
  "configu-python-sdk"
]
# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development"
]
packages = [{ include = "configu" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.28.1"
py-validator = "^0.18.0"
chevron = "^0.14.0"
boto3 = "^1.26.155"
boto3-stubs = { extras = ["secretsmanager"], version = "^1.26.155" }
azure-keyvault-secrets = "^4.7.0"
azure-identity = "^1.13.0"
google-cloud-secret-manager = "^2.16.1"
kubernetes = "^26.1.0"
jsonschema = "^4.20.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0" # configs at .flake8
black = { extras = ["d"], version = "^23.1.0" }
pdoc = "^13.1.0" # https://pdoc.dev/docs/pdoc.html

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = 'configu/core/generated.py'

# https://docs.pytest.org/en/7.1.x/reference/reference.html#ini-options-ref
# https://pytest-cov.readthedocs.io/en/latest/config.html
[tool.pytest.ini_options]
cache_dir = 'tmp/pytest_cache'
minversion = "6.0"
addopts = "-ra -q -p no:cacheprovider" # --cov=configu tests/ --cov-report html:tmp/coverage
filterwarnings = 'ignore::DeprecationWarning'
testpaths = [
  "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
